--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,57 @@
-discord.py==0.16.8 
+aiohttp==1.0.5
+asn1crypto==0.22.0
+astroid==1.5.3
+async-timeout==1.2.1
+backports.ssl==0.0.9
+beautifulsoup4==4.6.0
+certifi==2017.4.17
+cffi==1.10.0
+chardet==3.0.4
+colorama==0.3.9
+cryptography==2.0.3
+discord.py==0.16.8
+docx==0.2.4
+et-xmlfile==1.0.1
+flake8==3.3.0
+future==0.16.0
+idna==2.5
+IMAPClient==1.0.2
+isort==4.2.15
+jdcal==1.3
+lazy-object-proxy==1.3.1
+lxml==3.8.0
+mccabe==0.6.1
+mock==1.3.0
+multidict==2.1.6
+numpy==1.13.3
+olefile==0.44
+openpyxl==2.4.8
+pbr==3.1.1
+Pillow==4.2.1
+praw==4.5.1
+prawcore==0.10.1
+PyAutoGUI==0.9.36
+pycodestyle==2.3.1
+pycparser==2.18
+pyflakes==1.5.0
+PyJWT==1.5.2
+pylint==1.7.2
+PyMsgBox==1.0.6
+pyOpenSSL==17.2.0
+PyPDF2==1.26.0
+pyperclip==1.5.27
+PyScreeze==0.1.13
+PySocks==1.6.7
+python-docx==0.8.6
+PyTweening==1.0.3
+pytz==2017.2
+pyzmail36==1.0.3
+requests==2.18.1
+selenium==3.4.3
+six==1.10.0
+twilio==6.5.1
+update-checker==0.16
+urllib3==1.21.1
+virtualenv==15.1.0
+websockets==3.3
+wrapt==1.10.11
