--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pyflakes==1.5.0
 PyJWT==1.5.2
 pylint==1.7.2
 PyMsgBox==1.0.6
+PyNaCl==1.2.0
 pyOpenSSL==17.2.0
 PyPDF2==1.26.0
 pyperclip==1.5.27
@@ -53,3 +54,4 @@ urllib3==1.21.1
 virtualenv==15.1.0
 websockets==3.3
 wrapt==1.10.11
+youtube-dl==2017.11.15
